# recife-weather-etl-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: config.py  settings.py
dags/: recife_weather_dag.py
data/processed/: processed_recife_weather=2025-06-12_17-08-16.csv
data/raw/: recife_weather=2025-06-12_17-08-16.json
notebooks/: analysing_data.ipynb
src/extract/: extract_data.py
src/load/: load_data.py
src/transform/: transform_data.py
